--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocketseat2.0</title>
-</head>
-<body>
-    
-</body>
+    <head>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
+
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Rocketseat2.0</title>
+    </head>
+    <body>
+        <div id="container">
+            <div id="profile">
+                <img src="./images/avatar.png" alt="Foto de perfil">
+                <p>Sergio</p>
+            </div>
+            <ul>
+                <li>
+                    <a href="https://www.linkedin.com/in/sergiodjr">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="https://github.com/SergioTEC">GitHub</a>
+                </li>
+                <li>
+                    <a href="https://www.beecrowd.com.br/judge/pt/profile/658798">Desafios Beecrowd</a>
+                </li>
+            </ul>
+        </div>
+    </body>
 </html>
