Atualizando o HTML, CSS e adicionando ícones

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
@@ -29,6 +28,19 @@
                     <a href="https://www.beecrowd.com.br/judge/pt/profile/658798">Desafios Beecrowd</a>
                 </li>
             </ul>
+            <div id="social-links">
+                <a href="https://www.linkedin.com/in/sergiodjr"" target="_blank">
+                    <ion-icon name="logo-linkedin"></ion-icon>
+                </a>
+                <a href="https://github.com/SergioTEC" target="_blank">
+                    <ion-icon name="logo-github"></ion-icon>
+                </a>
+                <a href="https://www.beecrowd.com.br/judge/pt/profile/658798" target="_blank">
+                    <ion-icon name="bug-outline"></ion-icon>
+                </a>
+            </div>
         </div>
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     </body>
 </html>
