--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" class="">
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,6 +17,13 @@
                 <img src="./images/avatar.png" alt="Foto de perfil">
                 <p>Sergio</p>
             </div>
+
+            <div id="switch">
+                <button>
+                </button>
+                <span></span>
+            </div>
+
             <ul>
                 <li>
                     <a href="https://www.linkedin.com/in/sergiodjr">LinkedIn</a>
@@ -28,6 +35,7 @@
                     <a href="https://www.beecrowd.com.br/judge/pt/profile/658798">Desafios Beecrowd</a>
                 </li>
             </ul>
+
             <div id="social-links">
                 <a href="https://www.linkedin.com/in/sergiodjr"" target="_blank">
                     <ion-icon name="logo-linkedin"></ion-icon>
@@ -39,6 +47,10 @@
                     <ion-icon name="bug-outline"></ion-icon>
                 </a>
             </div>
+
+            <footer>
+                2023®
+            </footer>
         </div>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
